# 02_Metamorfno_testiranje_KK

./: .gitignore  1179272981692847560.c  96270563178551946.c  README.md  validate.py  verify.py
csmith/: README.md  csmith_gen.py  test_timeout.py  timeout.py  tmp.c
docs/: test.txt  trans.txt
petlje/: CMakeLists.txt  README.md  petlje.cpp
petlje/inc/: Do2ForConsumer.hpp  For2DoConsumer.hpp  For2WhileConsumer.hpp  LoopConsumer.hpp  PrepForConsumer.hpp  While2DoConsumer.hpp  While2ForConsumer.hpp
petlje/src/: Do2ForConsumer.cpp  For2DoConsumer.cpp  For2WhileConsumer.cpp  PrepForConsumer.cpp  While2DoConsumer.cpp  While2ForConsumer.cpp  petlje.cpp
petlje/test/: prob_while.c  samodo.c  samofor.c  samowhile2.c
petlje/tst/: prob_in.c
rekurzija/: CMakeLists.txt  README.md  rekurzija.cpp
rekurzija/test/: rekiter.c  samoiter.c  samorek.c
test/: CMakeLists.txt  README.md  main.cpp  testiraj.sh
test/goto/: loops.c  loops_goto.c
test/izvestaj/: generateCodeCoverageReport.sh  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
test/izvestaj/header/: CodeImputVisitor.hpp.func-sort-c.html  CodeImputVisitor.hpp.func.html  CodeImputVisitor.hpp.gcov.html  Do2ForVisitor.hpp.func-sort-c.html  Do2ForVisitor.hpp.func.html  Do2ForVisitor.hpp.gcov.html  Do2GotoVisitor.h.func-sort-c.html  Do2GotoVisitor.h.func.html  Do2GotoVisitor.h.gcov.html  FinIterVisitor.hpp.func-sort-c.html  FinIterVisitor.hpp.func.html  FinIterVisitor.hpp.gcov.html  FinRekVisitor.hpp.func-sort-c.html  FinRekVisitor.hpp.func.html  FinRekVisitor.hpp.gcov.html  For2DoVisitor.hpp.func-sort-c.html  For2DoVisitor.hpp.func.html  For2DoVisitor.hpp.gcov.html  For2GotoVisitor.hpp.func-sort-c.html  For2GotoVisitor.hpp.func.html  For2GotoVisitor.hpp.gcov.html  For2WhileVisitor.hpp.func-sort-c.html  For2WhileVisitor.hpp.func.html  For2WhileVisitor.hpp.gcov.html  IdentityVisitor.hpp.func-sort-c.html  IdentityVisitor.hpp.func.html  IdentityVisitor.hpp.gcov.html  If2SwitchVisitor.hpp.func-sort-c.html  If2SwitchVisitor.hpp.func.html  If2SwitchVisitor.hpp.gcov.html  Iter2RekVisitor.hpp.func-sort-c.html  Iter2RekVisitor.hpp.func.html  Iter2RekVisitor.hpp.gcov.html  LoopUnrollVisitor.hpp.func-sort-c.html  LoopUnrollVisitor.hpp.func.html  LoopUnrollVisitor.hpp.gcov.html  MTKConsumer.hpp.func-sort-c.html  MTKConsumer.hpp.func.html  MTKConsumer.hpp.gcov.html  MTKContext.hpp.func-sort-c.html  (+42 more)
test/izvestaj/source/: Assert.cpp.func-sort-c.html  Assert.cpp.func.html  Assert.cpp.gcov.html  CodeImputVisitor.cpp.func-sort-c.html  CodeImputVisitor.cpp.func.html  CodeImputVisitor.cpp.gcov.html  Do2ForVisitor.cpp.func-sort-c.html  Do2ForVisitor.cpp.func.html  Do2ForVisitor.cpp.gcov.html  Do2GotoVisitor.cpp.func-sort-c.html  Do2GotoVisitor.cpp.func.html  Do2GotoVisitor.cpp.gcov.html  FinIterVisitor.cpp.func-sort-c.html  FinIterVisitor.cpp.func.html  FinIterVisitor.cpp.gcov.html  FinRekVisitor.cpp.func-sort-c.html  FinRekVisitor.cpp.func.html  FinRekVisitor.cpp.gcov.html  For2DoVisitor.cpp.func-sort-c.html  For2DoVisitor.cpp.func.html  For2DoVisitor.cpp.gcov.html  For2GotoVisitor.cpp.func-sort-c.html  For2GotoVisitor.cpp.func.html  For2GotoVisitor.cpp.gcov.html  For2WhileVisitor.cpp.func-sort-c.html  For2WhileVisitor.cpp.func.html  For2WhileVisitor.cpp.gcov.html  If2SwitchVisitor.cpp.func-sort-c.html  If2SwitchVisitor.cpp.func.html  If2SwitchVisitor.cpp.gcov.html  Iter2RekVisitor.cpp.func-sort-c.html  Iter2RekVisitor.cpp.func.html  Iter2RekVisitor.cpp.gcov.html  LoopUnrollVisitor.cpp.func-sort-c.html  LoopUnrollVisitor.cpp.func.html  LoopUnrollVisitor.cpp.gcov.html  MTKContext.cpp.func-sort-c.html  MTKContext.cpp.func.html  MTKContext.cpp.gcov.html  MTKTransformer.cpp.func-sort-c.html  (+42 more)
test/odmotavanje/: bezpromene.c  jednostruke.c  trostruke.c
test/petlje/: samofor2.c  samowhile2.c
test/rekurzija/: output.txt  rekiter.c  samoiter.c  samoiter2.c  samorek.c  samorek2.c
test/umetanje/: bloated.c  lagrneopt.txt  lagrundef.txt  normal.c
test/uslovi/: ifswitch.c  output.txt  samoif.c  samoif2.c  samoswitch.c  samoswitch2.c
trans/: CMakeLists.txt  README.md  testiraj.sh
trans/header/: Assert.hpp  CodeImputVisitor.hpp  Do2GotoVisitor.h  FinIterVisitor.hpp  FinRekVisitor.hpp  For2GotoVisitor.hpp  For2WhileVisitor.hpp  IdentityVisitor.hpp  If2SwitchVisitor.hpp  Iter2RekVisitor.hpp  LoopUnrollVisitor.hpp  MTKConsumer.hpp  MTKContext.hpp  MTKTransformer.hpp  PrepDo2GotoVisitor.hpp  PrepFor2Goto.hpp  PrepFor2GotoVisitor.hpp  PrepForVisitor.hpp  PrepIfVisitor.hpp  PrepIffVisitor.hpp  PrepSwitchVisitor.hpp  PrepWhile2Goto.hpp  PrepWhile2GotoVisitor.hpp  While2GotoVisitor.hpp
trans/include/: FinRekVisitor.hpp  Iter2RekVisitor.hpp  MTKConsumer.hpp  MTKContext.hpp  MTKTransformer.hpp  PrepForVisitor.hpp  PrepSwitchVisitor.hpp  Switch2IfVisitor.hpp
trans/odmot/: bezpromene.c  output.txt
trans/petlje/: output.txt  samodo2.c  samofor.c  samofor2.c  samowhile.c  whilefor.c
trans/rekurzija/: output.txt  rekiter.c  samoiter.c  samoiter2.c  samorek.c  samorek2.c
trans/rekurzija/test/: rekiter.c  samoiter.c
trans/source/: Assert.cpp  CodeImputVisitor.cpp  Do2ForVisitor.cpp  Do2GotoVisitor.cpp  FinIterVisitor.cpp  FinRekVisitor.cpp  For2DoVisitor.cpp  For2GotoVisitor.cpp  For2WhileVisitor.cpp  IdentityVisitor.cpp  If2SwitchVisitor.cpp  Iter2RekVisitor.cpp  LoopUnrollVisitor.cpp  MTKContext.cpp  MTKTransformer.cpp  PrepDo2GotoVisitor.cpp  PrepFor2Goto.cpp  PrepFor2GotoVisitor.cpp  PrepForVisitor.cpp  PrepIfVisitor.cpp  PrepIffVisitor.cpp  PrepSwitchVisitor.cpp  PrepWhile2Goto.cpp  PrepWhile2GotoVisitor.cpp  Rek2IterVisitor.cpp  Switch2IfVisitor.cpp  While2ForVisitor.cpp  While2GotoVisitor.cpp  main.cpp  trans.cpp
trans/source/main/: main.cpp
trans/umetanje/: bezopt.c  bloated.c  dobaropt.c  lagrneopt.txt  lagrundef.txt  normal.c  punopt.c  undefined.txt  undefopt.c
trans/uslovi/: ifswitch.c  samoswitch.c  samoswitch2.c
uslovi/: CMakeLists.txt  README.md  uslovi.cpp
uslovi/test/: samoif2.c
uslovi/tst/: if_in.c  if_out.c  ifswitch.c  samoif.c  samoif2.c  samoswitch.c  samoswitch2.c  switch_in.c  switch_out.c
(+48 files in other folders)
